Inserção de comentários nos métodos da classe Painel